# cudl-package-schemas

./: .editorconfig  .gitignore  CollectionType.xsd  ItemType.xsd  README.md  ResourceType.xml  bitbucket-pipelines.yml  collection.xml  collection.xsd  collections.xpr  conftest.py  item.schema.json  item.xml  item.xsd  pyproject.toml  resource.xml  resource.xsd  site.xml  site.xsd
Internal-JSON-format/: Makefile  README.md  README.txt  package.json
Internal-JSON-format/schemas/: item.json
Internal-JSON-format/tests/: test_internal_schemas.py
JSON-package-format/: .npmignore  Makefile  README.md  README.txt  package.json
JSON-package-format/examples/: collection-example.json  collection-example.json5  cudl-current-ui-example.json  cudl-current-ui-example.json5  dataset-example.json  item-example.json  item-example.json5  site-dataset-example.json5  site-ui-example.json5  ui-example.json
JSON-package-format/schemas/: collection.json  common.json  cudl-item.json  cudl.item.schema.json  dl-dataset.json  item.json  mudl-item.json  (+3 more)
JSONInputSchema/: item.json  item.schema.json
JSONOutputSchema/: item.schema.json
XML-generation-scripts/: ItemJSONtoXML.py  README  requirements.txt
XML-package-format/: README.txt
cudl-viewer/: item.schema.json
rev2/: cudl-current-ui-example.json  item-example.json  site-example.json
semantic/: ItemType.xsd  ResourceType.xsd  collection.xml  collection.xsd  item.xml  site.xsd
simple/: collection.xml  collection.xsd  item.rng  item.xml  item.xsd  site.xml  site.xsd
support/: draft-07-strict-schema.json5  schema_testing.py
(+126 files in other folders)
