[tool.poetry]
name = "cudl-package-schemas"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^4.5"
jsonpatch = "^1.23"
json5 = "^0.7.0"
jsonschema = "^3.0"
rfc3987 = "^1.3"

[tool.poetry.dev-dependencies]
ipython = "^7.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
